--- a/DevCom/DevCom/Views/Shared/_Layout.cshtml
+++ b/DevCom/DevCom/Views/Shared/_Layout.cshtml
@@ -42,14 +42,14 @@
                         <span class="tooltip">Tasks</span>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="@Url.Action("Index", "Reminder")">
                             <i class='bx bx-calendar bx-sm'></i>
                             <span class="link_name">Reminder</span>
                         </a>
                         <span class="tooltip">Reminder</span>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="@Url.Action("Index", "VisualBoard")">
                             <i class='bx bx-table bx-sm'></i>
                             <span class="link_name">Visual Board</span>
                         </a>
