--- a/DevCom/DevCom/Views/Shared/_Layout.cshtml
+++ b/DevCom/DevCom/Views/Shared/_Layout.cshtml
@@ -55,6 +55,13 @@
                         </a>
                         <span class="tooltip">Visual Board</span>
                     </li>
+                    <li>
+                        <a href="@Url.Action("Canvas", "VisualBoard")">
+                            <i class='bx bx-brush bx-sm'></i>
+                            <span class="link_name">Canvas</span>
+                        </a>
+                        <span class="tooltip">Canvas</span>
+                    </li>
                     <li class="vault">
                         <a href="#">
                             <i class='bx bx-hdd bx-sm' id="_vault"></i>
